adding macos dotfiles

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,8 +1,10 @@
-[filter "lfs"]
-	required = true
-	clean = git-lfs clean -- %f
-	smudge = git-lfs smudge -- %f
-	process = git-lfs filter-process
 [user]
 	name = Elias Nepomuceno
 	email = eliasnepo12@gmail.com
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
+[core]
+	editor = vim
